--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>JS Client</title>
+    <title>Tareas - Flamer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<link rel="stylesheet" href="css/style.css">-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 </head>
 <body>
-<script src="flamer.js"></script>
-<div id="root"></div>
+    <script src="flamer.js"></script>
+    <div id="root"></div>
 </body>
 </html>
