--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <!--<script src="https://apis.google.com/js/platform.js" async defer></script>-->
   <meta name="google-signin-client_id" content="505657173480-lm8snj1b1ple9r9qbp81fsav0pnfdrmi.apps.googleusercontent.com" />
 
   <!-- iOS meta tags & icons -->
@@ -44,6 +44,7 @@
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
         navigator.serviceWorker.register('flutter_service_worker.js');
+        navigator.serviceWorker.register("firebase-messaging-sw.js");
       });
     }
   </script>
@@ -51,6 +52,7 @@
   <!-- Add SDKs for Firebase products that you want to use
        https://firebase.google.com/docs/web/setup#available-libraries -->
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-analytics.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-messaging.js"></script>
@@ -70,7 +72,7 @@
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
-    // firebase.analytics();
+    firebase.analytics();
   </script>
 
   <script src="main.dart.js" type="application/javascript"></script>
