--- a/web/index.html
+++ b/web/index.html
@@ -78,7 +78,15 @@
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
         navigator.serviceWorker.register('/flutter_service_worker.js');
-        navigator.serviceWorker.register('/firebase-messaging-sw.js');
+        navigator.serviceWorker.getRegistration()
+          .then(function(registration) {
+            if (registration.pushManager) {
+              console.log('SOPORTADO');
+              navigator.serviceWorker.register('/firebase-messaging-sw.js');
+            } else {
+              console.log('NO SOPORTADO');
+            }
+          });
       });
     }
   </script>
